# botTetris

./: .travis.yml  README.md  meson.build
src/: eval.c  eval.h  field.c  field.h  main.c  strategy.c  strategy.h  tetrimino.c  tetrimino.h  tetrimino_I.h  tetrimino_J.h  tetrimino_O.h  tetrimino_S.h  tetrimino_T.h
src/tetrimino/: tetrimino.c  tetrimino.h  tetrimino_I.h  tetrimino_L.h  tetrimino_T.h  tetrimino_Z.h
tests/: common.c  common.h  meson.build  test.c  test.h  test_eval.c  test_field.c  test_strategy.c  test_tetrimino.c
tests/tetrimino/: meson.build  test_tetrimino.c
